# gnar-term

./: .gitignore  .implement-state.json  .prettierignore  CHANGELOG.md  CLAUDE.md  CMUX-GAP-ANALYSIS.md  EXTENSIONS.md  FEATURES.md  ISSUES.md  README.md  RELEASE.md  WORKPLAN.md  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  rewrite.js  tsconfig.json  vite.config.ts
.claude/commands/: create_new_release.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml  update-homebrew.yml
docs/: _config.yml  agent-teams-spec.md  architecture.md  cli-usage.md  competitive-analysis.md  competitive-landscape.md  configuration.md  domain-model.md  event-contracts.md  extension-api-reference.md  extension-cookbook.md  extension-development.md  extension-getting-started.md  glossary.md  index.md  keyboard-shortcuts.md  mcp.md  registry-system.md  release-process.md  sidebar-architecture.md
docs/adr/: 001-extension-architecture.md  002-extension-api-evolution.md  003-extension-content-boundary.md  004-workspace-groups-unification.md
docs/architecture/: index.md
docs/extensions/: api-reference.md  index.md
docs/implement/: context-wave2-contracts.md  progress.md  ux-review-plan.md
scripts/: e2e-features.sh  e2e-test.sh  smoke-test.sh  test-headless.sh
src/: App.svelte  command-palette.ts  config.ts  context-menu.ts  find-bar.ts  main.ts  markdown-viewer.ts  sidebar.ts  tab-bar.ts  terminal-manager.ts  test-setup.ts  theme.ts  xterm.d.ts
src-tauri/: Cargo.toml  Info.dev.plist  build.rs  deny.toml  rustfmt.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/src/: b64.rs  cli.rs  commands.rs  file_utils.rs  file_watch.rs  font.rs  fs.rs  fs_commands.rs  gh_commands.rs  git.rs  git_helpers.rs  git_info.rs  git_ops.rs  git_status_ops.rs  git_worktree.rs  internal_bridge.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_register.rs  osc.rs  osc_parser.rs  pty.rs
src-tauri/windows/: hooks.nsh
src/__tests__/: agent-dashboard.test.ts  agent-detection-service.test.ts  agent-intervention.test.ts  agent-status-store.test.ts  agentic-orchestrator-contributors.test.ts  agentic-orchestrator-extension.test.ts  agents-sidebar.test.ts  app-bootstrap-rootrow.test.ts  app-render.test.ts  archive-service.test.ts  archive-store.test.ts  auto-provision-dashboards.test.ts  branch-validation.test.ts  child-row-contributor-registry.test.ts  claimed-workspace-registry.test.ts  clone-flow.test.ts  color-picker.test.ts  command-registry.test.ts  component-rendering.test.ts  components.test.ts  config-migrations-v2.test.ts  config-migrations-v3.test.ts  config-migrations.test.ts  config-terminal-features.test.ts  confirm-and-close-workspace.test.ts  container-row-with-slot.svelte  container-row.test.ts  context-menu-registry.test.ts  core-api-extensions.test.ts  create-registry.test.ts  cwd-polling-notify.test.ts  dashboard-contribution-backfill.test.ts  dashboard-contribution-registry.test.ts  dashboard-extension.test.ts  dashboard-host-context.test.ts  dashboard-tab-registry.test.ts  dashboard-tile-icon-only.test.ts  dashboard-workspace-service.test.ts  drag-ghost.test.ts  (+163 more)
tests/: mcp-integration.mjs  mcp-scenarios.mjs
(+413 files in other folders)
