[package]
name = "clawtab"
version = "0.1.0"
edition = "2021"

[lib]
name = "clawtab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "clawtab"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
