[package]
name = "gnar-term"
version = "0.3.1"
edition = "2021"

[lib]
name = "gnar_term_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "gnar-term"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
libc = "0.2"
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
